wp-content/themes/cevam/style.css
/*
    Theme Name: Cevam
    Theme URI: https://cevam.church
    Author: Tiavina Ranaivoson
    Author URI: https://tiavina.com
    Version: 1.0
*/

@font-face {
    font-family: 'Montserrat Extra Light';
    font-style: normal;
    font-weight: normal;
    font-display: swap;
    src: local('Montserrat Extra Light'), url('assets/fonts/Montserrat-ExtraLight.woff') format('woff');
}

@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: normal;
    font-display: swap;
    src: local('Montserrat'), url('assets/fonts/Montserrat-Regular.woff') format('woff');
}

@font-face {
    font-family: 'Montserrat Extra Bold';
    font-style: normal;
    font-weight: normal;
    font-display: swap;
    src: local('Montserrat Extra Bold'), url('assets/fonts/Montserrat-ExtraBold.woff') format('woff');
}

@font-face {
    font-family: 'Montserrat Extra Bold Italic';
    font-style: normal;
    font-weight: normal;
    font-display: swap;
    src: local('Montserrat Extra Bold Italic'), url('assets/fonts/Montserrat-ExtraBoldItalic.woff') format('woff');
}

@font-face {
    font-family: 'Joyride';
    font-style: normal;
    font-weight: normal;
    font-display: swap;
    src: local('Joyride'), url('assets/fonts/Joyride-Regular.woff') format('woff');
}

:root {
    --primary-color: #123e63;
    --secondary-color: #b1bdc9;
    --tertiary-color: #c4d0dc;
    --light-color: #f2f2f2;
    --dark-color: #a7a7a7;
    --red-color: #f22f11;
    --font-light: 'Montserrat Extra Light', sans-serif;
    --font-regular: 'Montserrat', sans-serif;
    --font-bold: 'Montserrat Extra Bold', sans-serif;
    --font-bold-italic: 'Montserrat Extra Bold Italic', sans-serif;
    --font-black: 'Joyride', sans-serif;
}

::selection {
    -webkit-text-fill-color: white !important;
    color: white !important;
    background: var(--primary-color) !important;
}

a {
    color: var(--primary-color);
}

body.is-dark a {
    color: white;
}

a:not(:hover) {
    text-decoration: none;
}

ul {
    margin: 0;
    padding: 0;
}

li {
    list-style: none;
}

html, body {
    margin: 0;
    padding: 0;
    min-height: 100vh;
}

body {
    --header-height: 0px;
    display: flex;
    flex-direction: column;
    font-family: var(--font-regular);
    background-color: white;
}

body.sticky {
    padding-top: var(--header-height);
}

body.is-dark {
    color: var(--tertiary-color);
}

body * {
    box-sizing: border-box;
}

img {
    image-rendering: crisp-edges;
    image-rendering: -moz-crisp-edges;
    image-rendering: -o-crisp-edges;
    image-rendering: -webkit-optimize-contrast;
    -ms-interpolation-mode: nearest-neighbor;
}

h1, h2, h3, h4, h5, h6 {
    margin: 0;
    font-weight: normal;
    font-family: var(--font-bold);
}

.d-none {
    display: none !important;
}

.is-light {
    font-family: var(--font-light);
}

.is-regular {
    font-family: var(--font-regular);
}

.is-bold {
    font-family: var(--font-bold);
}

.is-bold-italic {
    font-family: var(--font-bold-italic);
}

.is-black {
    font-family: var(--font-black);
}

.no-select {
      -webkit-user-select: none;
    -webkit-touch-callout: none;
       -khtml-user-select: none;
          -ms-user-select: none;
         -moz-user-select: none;
              user-select: none;
}

.lds-ring {
    display: inline-block;
    position: relative;
    width: 96px;
    height: 96px;
}

.lds-ring div {
    display: block;
    position: absolute;
    width: 80px;
    height: 80px;
    margin: 4px;
    border: 4px solid var(--primary-color);
    border-radius: 50%;
    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
    border-color: var(--primary-color) transparent transparent transparent;
}

.lds-ring div:nth-child(1) {
    animation-delay: -0.45s;
}

.lds-ring div:nth-child(2) {
    animation-delay: -0.3s;
}

.lds-ring div:nth-child(3) {
    animation-delay: -0.15s;
}

@keyframes lds-ring {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

body.loading {
    max-height: 100vh;
    overflow: hidden;
}

body:not(.loading) #page-loading {
    display: none;
}

#page-loading {
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    z-index: 10000;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

#page-loading > div {
    position: relative;
}

.grecaptcha-badge {
    visibility: hidden;
    z-index: -1;
}

/* header styles */
#main-header {
    display: flex;
    box-shadow: 0 0 1rem 1px #0000001a;
}

body.sticky #main-header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background: white;
    z-index: 1;
}

body.sticky.is-dark #main-header {
    background: #121212;
}

#menu-logo {
    flex: 1;
    display: flex;
    justify-content: flex-start;
}

#menu-logo a {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    padding: 1rem;
}

#menu-logo img {
    height: 32px;
}

#horizontal-menu {
    display: none;
}

.menu-item a {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    border-bottom: solid 3px transparent;
    text-transform: lowercase;
    font-family: var(--font-black);
    text-decoration: none;
}

body.is-live .menu-item a[href*="/live"]::after {
    content: "";
    margin-left: 0.25rem;
    height: 0.5rem;
    width: 0.5rem;
    border-radius: 100%;
    background: var(--red-color);
}

#horizontal-menu a {
    min-height: 100%;
    padding: 1.5rem 1rem;
}

.menu-item:not(.current-menu-item):not(:hover) a {
    color: var(--tertiary-color);
}

.menu-item.current-menu-item a, .menu-item:not(.current-menu-item):hover a {
    border-bottom-color: var(--primary-color);
}

body.is-dark .menu-item.current-menu-item a, body.is-dark .menu-item:not(.current-menu-item):hover a {
    border-bottom-color: white;
}

#horizontal-language-switcher {
    flex: 1;
    display: none;
    align-items: center;
    justify-content: flex-end;
    padding: 1rem;
}

.language-switcher select {
    font-family: var(--font-black);
    font-size: 1rem;
    border: none;
    background: none;
    color: var(--primary-color);
}

body.is-dark .language-switcher select {
    color: white;
}

body.is-dark .language-switcher select option {
    color: var(--primary-color);
}

#vertical-menu-section {
    flex: 1;
    position: relative;
}

#toggle-menu-container {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    height: 100%;
}

#toggle-menu-title {
    padding: 0.5rem 0;
    text-transform: lowercase;
    font-family: var(--font-black);
    color: var(--primary-color);
    cursor: pointer;
}

body.is-dark #toggle-menu-title {
    color: white;
}

.hamburger-lines {
    display: flex;
    flex-direction: column;
    padding: 0 0.5rem 0 1rem;
    cursor: pointer;
}

.hamburger-lines .line {
    margin: 4px 0;
    height: 5px;
    width: 36px;
    background: var(--primary-color);
}

body.is-dark .hamburger-lines .line {
    background: white;
}

.hamburger-lines .line1 {
    transition: transform 0.4s ease-in-out;
}

body.open-menu .hamburger-lines .line1 {
    transform-origin: 1px 4px;
    transform: rotate(45deg);
}

.hamburger-lines .line2 {
    transition: transform 0.2s ease-in-out;
}

body.open-menu .hamburger-lines .line2 {
    transform: scaleX(0);
}

.hamburger-lines .line3 {
    transition: transform 0.4s ease-in-out;
}

body.open-menu .hamburger-lines .line3 {
    transform-origin: 0 0;
    transform: rotate(-45deg);
}

#menu-dim {
    display: none;
}

body.open-menu #menu-dim {
    position: absolute;
    display: block;
    left: -100vw;
    top: 100%;
    height: 100vh;
    width: calc(100vw + 100%);
    background: #000000bf;
    z-index: 1;
}

#vertical-menu-container {
    position: absolute;
    right: 0;
    top: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: calc(100vh - 100%);
    width: 100vw;
    background: white;
    box-shadow: 0 1rem 1rem 1px #0000001a;
    z-index: 1;
}

body.is-dark #vertical-menu-container {
    background: #121212;
}

#vertical-menu {
    flex: 1;
    padding: 0.5rem;
    overflow: auto;
}

#vertical-menu a {
    margin: 1rem auto;
    padding: 0.5rem;
    width: max-content;
}

#vertical-language-switcher {
    padding: 0.5rem 1rem;
    text-align: right;
}

body.open-menu {
    max-height: 100vh;
    overflow: hidden;
}

body:not(.open-menu) #vertical-menu-container:not(.animate__animated) {
    display: none;
}

@media screen and (min-width: 350px) {
    #menu-logo {
        flex: unset;
        margin: 0 2rem 0 1rem;
    }

    .hamburger-lines {
        padding: 0 1.5rem;
    }

    #vertical-menu-container {
        right: 0;
        width: 350px;
    }
}

@media screen and (min-width: 650px) {
    #toggle-menu-title {
        color: var(--tertiary-color);
    }

    #horizontal-menu {
        flex: 3 1 auto;
        display: flex;
        justify-content: center;
    }

    #horizontal-menu .menu-item:not(.menu-item.current-menu-item) {
        display: none;
    }
}

@media screen and (min-width: 768px) {
    #toggle-menu-title {
        font-size: 1.25rem;
    }
}

@media screen and (min-width: 1200px) {
    #horizontal-menu {
        flex-grow: 2;
    }

    #horizontal-menu .menu-item:not(.menu-item.current-menu-item) {
        display: block;
    }

    #horizontal-language-switcher {
        display: flex;
    }

    #vertical-menu-section {
        display: none;
    }
}

/* main section styles */
#main-section {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

/* footer styles */
#main-footer .copyrights {
    font-family: var(--font-light);
    color: var(--secondary-color);
    text-align: center;
    font-size: 75%;
}

